--- a/all.css
+++ b/all.css
@@ -53,6 +53,9 @@ table {
 	box-sizing: border-box;
 }
 
+img{
+	display: block;
+}
 
 
 .header{
@@ -81,15 +84,14 @@ table {
 	flex-wrap: wrap;
 }
 
-.banner .headshot{
+.banner .banner-Alyse{
 	width: 50%;
 	height: auto;
 }
 
-.banner .headshot img{
+.banner .banner-Alyse img{
 	width: 100%;
 	height: auto;
-	display: block;
 }
 
 .banner .name{
@@ -127,13 +129,16 @@ table {
 
 .banner .about .about-left{
 	width: 45%;
+	margin-top: -180px;
 }
 
 .banner .about .about-right{
-	width: 55%;
+	width: 53%;
 	padding: 80px 40px;
 	background: #FFFFFF;
+	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
 	margin-top: -180px;
+	margin-right: 2%;
 }
 
 .banner .about .about-right p{
@@ -150,7 +155,7 @@ table {
 }
 
 @media (max-width: 768px) {
-	.banner .headshot{
+	.banner .banner-Alyse{
 	width: 100%;
 	height: auto;
 	}
@@ -172,8 +177,269 @@ table {
 	width: 92%;
 	padding: 40px 24px;
 	margin-top: -150px;
+	margin-right: 0;
 	}
 	.banner .about .about-right p{
 	font-size: 24px;
 	}
+}
+
+.service{
+	padding: 5% 16%;
+}
+
+h2{
+	font-family: "Noto Sans TC", sans-serif;
+	line-height: 1.5; 
+	color: #000000;
+	font-weight: 700;
+	font-size: clamp(48px, 5vw, 64px);
+}
+
+.service h2{
+	margin-bottom: 32px;
+}
+
+.service .service-list{
+	display: flex;
+	flex-wrap: wrap;
+	gap: 64px;
+	padding-left: 5.73%;
+	padding-right: 5.73%;
+	margin-bottom: 32px;
+}
+
+.service .service-list .service-item{
+	display: flex;
+	align-items: center;
+}
+
+.service .service-list .service-item .service-item-img-left{
+	width: 59%;
+	height: auto;
+}
+
+.service .service-list .service-item .service-item-content-right{
+	width: 45%;
+	height: auto;
+  	background: #FFFFFF; 
+  	padding: 24px;
+	margin-left: -4%;
+	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.service .service-list .service-item .service-item-content-left{
+	width: 45%;
+	height: auto;
+	position: relative;
+	z-index: 2; /* 讓文字在圖片上方 */
+  	background: #FFFFFF; 
+  	padding: 24px;
+	box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.service .service-list .service-item .service-item-img-right{
+	width: 59%;
+	height: auto;
+	margin-left: -4%;
+}
+
+.service .service-list .service-item img{
+	width: 100%;
+	height: auto;
+}
+
+.service .service-list .service-item .line{
+	width: 30px;
+	height: 2.5px;
+	background: #0027D5;
+	border-radius: 5px;
+	margin: 18.75px 5px;
+}
+
+h3{
+	font-family: "Noto Sans TC", sans-serif;
+	line-height: 1.5; 
+	color: #000000;
+	font-weight: 700;
+	font-size: 28px;
+}
+
+.service h3{
+	margin-bottom: 8px;
+}
+
+.service .service-list .service-item p{
+	font-family: "Noto Sans TC", sans-serif;
+	line-height: 1.5; 
+	color: #4B4B4B;
+	font-weight: 500;
+	font-size: 16px;
+}
+
+.service-btn{
+	display: flex;
+	justify-content: flex-end;
+	gap: 8px;
+}
+
+@media (max-width: 768px) {
+	.service{
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 100px;
+	padding-bottom: 64px;
+	}
+	.service .service-list{	
+	gap: 32px;
+	padding-left: 0;
+	padding-right: 0;
+	}
+	.service .service-list .service-item{
+	flex-direction: column;
+	}
+	.service .service-list .service-item .service-item-img-left{
+	width: 100%;
+	height: 176px;
+	margin: 0 auto;
+	}
+	.service .service-list .service-item .service-item-content-right{
+	width: 100%;
+	height: auto;
+	margin: 0 auto;
+	}
+	.service .service-list .service-item .service-item-img-right{
+	width: 100%;
+	height: 176px;
+	margin: 0 auto;
+	}
+	.service .service-list .service-item .service-item-content-left{
+	width: 100%;
+	height: auto;
+	margin: 0 auto;
+	}
+	.service .service-list .service-item:nth-child(2),
+  	.service .service-list .service-item:nth-child(4) {
+    flex-direction: column-reverse;
+  	}
+	.service-btn{
+	flex-direction:column;
+	align-items: flex-end;
+	}
+}
+
+.blog{
+	padding: 5% 0;
+}
+
+.blog .blog-title{
+	padding: 0 16%;
+	margin-bottom: 24px;
+}
+
+.blog .blog-list{
+	padding: 0 12.7%;
+	display: flex;
+	align-items: center;
+	gap: 24px;
+}
+
+.blog .blog-list ul{
+	display: flex;
+	gap: 24px;
+}
+
+.blog .blog-list ul li{
+	width: 33%;
+	height: auto;
+}
+
+.blog .blog-list ul li img{
+	width: 100%;
+	height: 200px;
+	object-fit: cover;
+	margin-bottom: 16px;
+}
+
+.blog .blog-list ul li time{
+	font-family: "Noto Sans TC", sans-serif;
+	line-height: 1.5; 
+	color: #000000;
+	font-weight: 500;
+	font-size: 16px;
+}
+
+.blog .blog-list ul li .hashtag{
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
+.blog .blog-list ul li .hashtag a{
+	font-family: "Noto Sans TC", sans-serif;
+	line-height: 1.5; 
+	color: #0027D5;
+	font-weight: 500;
+	font-size: 20px;
+	text-decoration: none;
+}
+
+.blog .blog-list ul li .hashtag .highlight{
+	color: #FFFFFF;
+	font-weight: 700;
+	font-size: 16px;
+	background: #0027D5;
+	padding: 6px 12px;
+	border-radius: 20px;
+}
+
+.blog .blog-list ul li h3{
+  margin-bottom: 8px;
+}
+
+.blog .blog-list ul li p{
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 500;	
+  font-size: 16px;
+  line-height: 1.5;
+  color: #4B4B4B;
+  margin-bottom: 16px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* 限制顯示 2 行 */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.blog .blog-list ul li .read{
+  display: inline-block;	
+  font-family: "Noto Sans TC", sans-serif;
+  font-weight: 500;	
+  font-size: 16px;
+  line-height: 1.5;
+  color: #4B4B4B;	
+  text-decoration: none;
+  padding: 8px 16px;
+  border: 1px solid #000000; 
+  border-radius: 20px;
+}
+
+@media (max-width: 768px) {
+	.blog .blog-title{
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 64px;
+	}
+	.blog .blog-list{
+	padding: 0 15px;
+	flex-direction: colummn;
+	align-items: center;
+	}
+	.blog .blog-list ul li{
+	width: 100%;
+	height: auto;
+	}
+    .blog .blog-list ul li:not(:first-child) {
+    display: none; /* 隱藏除了第一個以外的 `li` */
+	}
+
 }
